--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Naveen Durvasula"
 title_separator          : "-"
 name                     : &name "Naveen Durvasula"
 description              : &description "Freshman at UC Berkeley M.E.T"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://ndurvasula.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "ndurvasula/ndurvasula.com"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
