--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  name             : "Naveen Durvasula"
+  avatar           : "profile.jpg"
+  bio              : "Freshman at UC Berkeley M.E.T."
+  location         : "Berkeley, CA"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
