--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Naveen Durvasula"
 title_separator          : "-"
 name                     : &name "Naveen Durvasula"
-description              : &description "Freshman at UC Berkeley M.E.T"
+description              : &description "Sophomore at UC Berkeley M.E.T"
 url                      : http://ndurvasula.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ndurvasula/ndurvasula.com"
