--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,16 +2,10 @@
 main:
   - title: "Research"
     url: /publications/  
-
-  - title: "Mathematical Musings"
-    url: /misc/    
-    
-  - title: "Class Notes"
-    url: /notes/
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/CV.pdf
 
