--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,13 @@
 # main links links
 main:
-  - title: "Research"
-    url: /publications/  
+  - title: "Publications"
+    url: /publications/ 
+
+  - title: "Talks"
+    url: /talks/  
+
+  - title: "Misc Writing"
+    url: /misc/   
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
