--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,10 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Writing"
     url: /publications/ 
 
   - title: "Talks"
-    url: /talks/  
-
-  - title: "Misc Writing"
-    url: /misc/   
+    url: /talks/ 
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
