--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Naveen Durvasula"
 title_separator          : "-"
 name                     : &name "Naveen Durvasula"
 description              : &description "UC Berkeley M.E.T '23"
-url                      : http://ndurvasula.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ndurvasula.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ndurvasula/ndurvasula.com"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
